--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,2 +1,11 @@
-<h1>Books#new</h1>
-<p>Find me in app/views/books/new.html.erb</p>
+<h2>New book</h2>
+  <!-- form_with部分の追加 -->
+  <%= form_with model:@book, local:true do |f| %>
+    <label>Title</label>
+    <%= f.text_field :title %>
+
+    <label>Body</label>
+    <%= f.text_field :body %>
+
+    <%= f.submit 'Create Book' %>
+  <% end %>
