--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <script src="/assets/application-114264dd93c8ff30e4335b71eed7949d66c4e7a8eb62e2de6284c046fe07104b.js" data-turbolinks-track="reload"></script>
+    <meta name="csrf-param" content="authenticity_token">
+    <meta name="csrf-token" content="qgPK/dgmN/aX+Hdd6R21SKQmixV8Dd1Dar1bBQqdE3wwrPMW8TJZ8Ua6iKuuaSDvsZsE82cK6c73Lu5cRHmt3Q==">
   </head>
 
   <body>
