--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,9 +1,9 @@
 <body>
   <h1>
-  ようこそBookersへ！
+  ようこそ<span>Bookers</span>へ！
   </h1>
   <p>
-    Bookersでは、さまざまな書籍に関するあなたの意見や
+    <span>Bookers</span>では、さまざまな書籍に関するあなたの意見や
   </p>
   <p>
     印象を共有し交換することができます。
