--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -17,8 +17,8 @@
         <% @books.each do |book| %>
         <td><%= book.title %></td>
         <td><%= book.body %></td>
-        <td><%= link_to "Show",  "books/#{book.id}" %></td>
-        <td><a href="t">Edit</a></td>
+        <td><%= link_to "Show", "books/#{book.id}" %></td>
+        <td><%= link_to "Edit", "books/#{book.id}/edit"  %></td>
         <td><a data-confirm="Are you sure?"  href="">Destroy</a></td>
         <% end %>
       </tr>
