--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -19,7 +19,7 @@
         <td><%= book.body %></td>
         <td><%= link_to "Show", "books/#{book.id}" %></td>
         <td><%= link_to "Edit", "books/#{book.id}/edit" %></td>
-        <td><a data-confirm="Are you sure?"  href="">Destroy</a></td>
+        <td><%= link_to "Destroy", "books/#{book.id}", method: :delete, "data-confirm" => "Are you sure?" %></td>
         <% end %>
       </tr>
   </tbody>
