--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -14,7 +14,7 @@
 <p>
   <%= link_to "Edit", edit_book_path(@book.id) %>
    |
-  <a  href="/books">Back</a>
+  <%= link_to "Back", books_path %>
 </p>
 
 
