--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,5 @@
 <body>
-    <p id="notice"></p>
-
+<p class="notice"><%= flash[:notice] %></p>
 <h1>Books</h1>
 
 <table>
@@ -20,14 +19,24 @@
         <td><%= link_to "Show", "books/#{book.id}" %></td>
         <td><%= link_to "Edit", "books/#{book.id}/edit" %></td>
         <td><%= link_to "Destroy", "books/#{book.id}", method: :delete, "data-confirm" => "Are you sure?" %></td>
-        <% end %>
       </tr>
+       <% end %>
   </tbody>
 </table>
 
 <h2>New book</h2>
+<!-- バリテーションの追加 -->
+<% if @book.errors.any? %>
+<div id="error_explanation">
+    <h2><%= @book.errors.count %>errors prohibited this book from being saved:</h2>
+    <% @book.errors.full_messages.each do |message| %>
+      <ul><li><%= message %></li></ul>
+    <% end %></div>”
+  <% end %>
+
+
 <!-- form_with部分の追加 -->
- <%= form_with model:@book, local:true do |f| %>
+<%= form_for(@book, url: books_path, method: :post) do |f| %>
   <label>Title</label>
   <%= f.text_field :title %>
 
