--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,6 +1,5 @@
 <body>
-    <p id="notice"></p>
-
+<p class="notice"><%= flash[:notice] %></p>
 <p>
   <strong>Title:</strong>
   <%= @book.title %>
@@ -11,11 +10,9 @@
   <%= @book.body %>
 </p>
 
-<p>
   <%= link_to "Edit", edit_book_path(@book.id) %>
    |
   <%= link_to "Back", books_path %>
-</p>
 
 
 
