--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,9 +1,19 @@
 <body>
+
   <p class="notice"><%= flash[:notice] %></p>
   <h1>Editing Book</h1>
 
   <!-- バリテーションの表示 -->
-  
+  <% if @book.errors.any? %>
+    <div id="error_explanation">
+    <h2><%= @book.errors.count %>errors prohibited this book from being saved:</h2>
+    <% @book.errors.full_messages.each do |message| %>
+      <ul><li><%= message %></li></ul>
+    <% end %></div>”
+  <% end %>
+
+
+  <!-- formの入力 -->
   <%= form_with model:@book, url:"/books/#{@book.id}", local:true do |f| %>
 
   <label>Title</label>
