--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -15,14 +15,16 @@
 
   <!-- formの入力 -->
   <%= form_with model:@book, url:"/books/#{@book.id}", local:true do |f| %>
-
+  <div class="field">
   <label>Title</label>
-  <%= f.text_field :title %>
-
+  <%= f.text_field :title %></div>
+  <div class="field">
   <label>Body</label>
-  <%= f.text_area :body %>
-
-  <%= f.submit 'Create Book' %>
+  <%= f.text_area :body %></div>
+  <div class="actions">
+  <%= f.submit 'Update Book' %></div>
   <% end %>
-
+  <%= link_to "Show", book_path(@book.id) %>
+   |
+  <%= link_to "Back", books_path %>
 </body>
