--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -29,20 +29,21 @@
 <% if @book.errors.any? %>
 <div id="error_explanation">
     <h2><%= @book.errors.count %>errors prohibited this book from being saved:</h2>
-    <% @book.errors.full_messages.each do |message| %>
-      <ul><li><%= message %></li></ul>
-    <% end %></div>”
+    <ul><% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %></ul></div>
   <% end %>
 
 
 <!-- form_with部分の追加 -->
 <%= form_for(@book, url: books_path, method: :post) do |f| %>
+  ><div class="field">
   <label>Title</label>
-  <%= f.text_field :title %>
-
+  <%= f.text_field :title %></div>
+  <div class="field">
   <label>Body</label>
-  <%= f.text_area :body %>
-
-  <%= f.submit 'Create Book' %>
+  <%= f.text_area :body %></div>
+  <div class="actions">
+    <%= f.submit 'Create Book' %></div>
 <% end %>
 </body>
